--- a/pytorch_practice/BN.ipynb
+++ b/pytorch_practice/BN.ipynb
@@ -52,6 +52,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4e79c4e8-fd13-46bc-9462-b31a224d8759",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "76a976a1-32d8-4576-9494-5eb1d20165d1",
    "metadata": {},
@@ -311,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 175,
    "id": "846364b2-dd2c-42fa-a0b5-c071983972b7",
    "metadata": {},
    "outputs": [],
@@ -337,13 +345,14 @@
     "            self.register_buffer(\"running_var\", torch.ones(num_features))\n",
     "            \n",
     "        else :\n",
-    "            self.running_mean = torch.tensor(0)\n",
-    "            self.running_var =  torch.tensor(1)\n",
+    "            self.register_buffer(\"running_mean\", torch.tensor(0))\n",
+    "            self.register_buffer(\"running_var\", torch.tensor(1))\n",
     "\n",
     "\n",
     "    \n",
     "    def forward(self, x):\n",
     "        \n",
+    "        print(x.shape)\n",
     "        if len(x.shape) == 2:\n",
     "            dim = 0\n",
     "            gamma = self.gamma[None, :]\n",
@@ -354,8 +363,7 @@
     "            gamma = self.gamma[None, :, None, None]\n",
     "            beta = self.beta[None, :, None, None]\n",
     "        else:\n",
-    "            raise Exception(f\"expected len of input dim be 2 or 4 but got {x.shape},\\\n",
-    "            num_features be at 2 dim\")\n",
+    "            raise Exception(f\"The shape of num_features {self.num_features} must match input feature shape {x.shape[1]}\")\n",
     "        \n",
     "        \n",
     "        if self.training :\n",
@@ -380,10 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 177,
    "id": "2dc45601-fd59-4d14-8a17-fe920771e62b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 4, 4])\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -419,13 +434,12 @@
        "          [-1.6281,  0.6634,  0.0726, -0.5598]]]], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "bn = BatchNorm(C, affine=True, track_running_stats=False)\n",
     "x2_norm = bn(x2)\n",
     "x2_norm"
@@ -433,27 +447,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 167,
    "id": "8550bcd2-a325-496c-82be-4b2644d7b4ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.9706,  0.9900,  1.0000],\n",
+      "        [ 0.9706, -0.9900, -1.0000]], grad_fn=<AddBackward0>)\n",
+      "tensor([[-0.0345, -0.1596, -0.0010]]) tensor([[0.9000, 0.9000, 0.9703]])\n",
+      "tensor([[-0.9706,  0.9900,  1.0000],\n",
+      "        [ 0.9706, -0.9900, -1.0000]], grad_fn=<AddBackward0>)\n",
+      "tensor([[-0.0656, -0.3033, -0.0019]]) tensor([[0.8100, 0.8101, 0.9437]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn = BatchNorm(C, affine=True, track_running_stats=True)\n",
+    "\n",
+    "for _ in range(2):\n",
+    "    x1_norm = bn(x1)\n",
+    "    print(x1_norm)\n",
+    "    print(bn.running_mean, bn.running_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "7c139a20-5c98-4950-ad78-58d6bcd94328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.3581, -1.5740,  0.8286],\n",
+      "        [-0.3326, -1.6184, -0.8488]], grad_fn=<AddBackward0>)\n",
+      "tensor([0., 0., 0.]) tensor([1., 1., 1.])\n",
+      "tensor([[-0.3581, -1.5740,  0.8286],\n",
+      "        [-0.3326, -1.6184, -0.8488]], grad_fn=<AddBackward0>)\n",
+      "tensor([0., 0., 0.]) tensor([1., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn = BatchNorm(C, affine=True, track_running_stats=True).eval()\n",
+    "\n",
+    "for _ in range(2):\n",
+    "    x1_norm = bn(x1)\n",
+    "    print(x1_norm)\n",
+    "    print(bn.running_mean, bn.running_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "39ace173-ccc0-468d-b8b9-f7966547bcdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.9706,  0.9900,  1.0000],\n",
+      "        [ 0.9706, -0.9900, -1.0000]], grad_fn=<AddBackward0>)\n",
+      "tensor([[-0.0345, -0.1596, -0.0010]]) tensor([[0.9000, 0.9000, 0.9703]])\n",
+      "tensor([[-0.9706,  0.9900,  1.0000],\n",
+      "        [ 0.9706, -0.9900, -1.0000]], grad_fn=<AddBackward0>)\n",
+      "tensor([[-0.0656, -0.3033, -0.0019]]) tensor([[0.8100, 0.8101, 0.9437]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn = BatchNorm(C, affine=True, track_running_stats=False)\n",
+    "\n",
+    "for _ in range(2):\n",
+    "    x1_norm = bn(x1)\n",
+    "    print(x1_norm)\n",
+    "    print(bn.running_mean, bn.running_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "985fbcc5-2a97-45de-b41d-d6bead58bc7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3])\n",
+      "tensor([[-0.3581, -1.5740,  0.8286],\n",
+      "        [-0.3326, -1.6184, -0.8488]], grad_fn=<AddBackward0>)\n",
+      "tensor(0) tensor(1)\n",
+      "torch.Size([2, 3])\n",
+      "tensor([[-0.3581, -1.5740,  0.8286],\n",
+      "        [-0.3326, -1.6184, -0.8488]], grad_fn=<AddBackward0>)\n",
+      "tensor(0) tensor(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn = BatchNorm(C, affine=True, track_running_stats=False).eval()\n",
+    "\n",
+    "for _ in range(2):\n",
+    "    x1_norm = bn(x1)\n",
+    "    print(x1_norm)\n",
+    "    print(bn.running_mean, bn.running_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "2cea506f-901e-4fe5-b748-c38d7c1b3834",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.9706,  0.9900,  1.0000],\n",
-       "        [ 0.9706, -0.9900, -1.0000]], grad_fn=<AddBackward0>)"
+       "3"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "bn = BatchNorm(C, affine=True, track_running_stats=True)\n",
-    "x1_norm = bn(x1)\n",
-    "x1_norm"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f7f834a-8f1f-41d9-9de1-45148ad3d376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
